<resources>
    <string name="app_name">SevenBooks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="search">Search</string>
    <string name="browse_by_category">Browse By Category</string>
    <string name="find_books">Find Books</string>
    <string name="category">Category</string>
    <string name="stock">Stock</string>
    <string name="price">Price</string>
    <string name="book_image">Book Image</string>
</resources>
